# python-4-dummies

./: Makefile  README.md  pyproject.toml
dumb_stuff/yield/: 01.py  02.py  03.py  04.py  05.py  06.py  README.md
tests/: test_simple.py
